@@ -21,28 +21,28 @@ def safe_basename(filename):
 def get_contenttype(file=None, filename=None, default='application/octet-stream'):
     """Get the MIME content type of the given file and/or filename.
     """
-    
+
     file_type = getattr(file, 'contentType', None)
-    if file_type is not None:
+    if file_type:
         return file_type
-        
+
     filename = getattr(file, 'filename', filename)
     if filename:
         extension = os.path.splitext(filename)[1].lower()
         return mimetypes.types_map.get(extension, 'application/octet-stream')
-    
+
     return default
 
 def set_headers(file, response, filename=None):
     """Set response headers for the given file. If filename is given, set
     the Content-Disposition to attachment.
     """
-    
+
     contenttype = get_contenttype(file)
-    
+
     response.setHeader("Content-Type", contenttype)
     response.setHeader("Content-Length", file.getSize())
-    
+
     if filename is not None:
         try:
             response.setHeader("Content-Disposition", "attachment; filename=\"%s\"" % filename)
@@ -60,8 +60,8 @@ def stream_data(file):
         # XXX: we may want to use this instead, which would raise an error
         # in case of uncomitted changes
         # filename = file._blob.committed()
-        
+
         filename = file._blob._p_blob_uncommitted or file._blob.committed()
         return filestream_iterator(filename, 'rb')
-    
+
     return file.data
